[gd_scene load_steps=3 format=3 uid="uid://3l4h0vcm1enb"]

[ext_resource type="Script" path="res://scenes/entities/enemies/laser.gd" id="1_gdxg7"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4q8w4"]
particle_flag_disable_z = true
angle_max = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 20.0
color = Color(1, 0.6, 0.6, 1)

[node name="Laser" type="RayCast2D"]
enabled = false
target_position = Vector2(-1280, 0)
collision_mask = 0
hit_from_inside = true
collide_with_areas = true
script = ExtResource("1_gdxg7")

[node name="Warning" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 64, 0)
width = 0.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_4q8w4")
lifetime = 0.1

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_4q8w4")
lifetime = 0.1

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 64, 0)
width = 0.0
default_color = Color(1, 0.25, 0.25, 1)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Duration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
